--- a/src/components/Resume/style.css
+++ b/src/components/Resume/style.css
@@ -430,3 +430,7 @@
     white-space: normal;
   }
 }
+.skills-list ul {
+  columns: 2;
+  column-gap: 2rem;
+}
